test/integration/httproute/manifests/basic/ok_multiple_listeners_one_gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example.haproxy"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /path1
      backendRefs:
        - name: http-echo
          port: 80
